# handwerker

./: CMakeLists.txt  DzCopyer.cpp  DzCopyer.hpp  DzMainClass.cpp  DzMainClass.hpp  main.cpp
examples/: valid_test.csv
examples/reallife/: Beispiel.csv
